include/dtl/bindings/c/dtl_algorithms.h


typedef void (*dtl_const_unary_func)(const void* element, dtl_size_t index, void* user_data);
typedef void (*dtl_transform_func)(const void* input, void* output, dtl_size_t index, void* user_data);
typedef int (*dtl_predicate)(const void* element, void* user_data);
typedef int (*dtl_comparator)(const void* a, const void* b, void* user_data);
typedef void (*dtl_binary_func)(const void* a, const void* b, void* result, void* user_data);
DTL_API dtl_status dtl_for_each_vector(dtl_vector_t vec, dtl_unary_func func,
                                        void* user_data);
DTL_API dtl_status dtl_for_each_vector_const(dtl_vector_t vec, dtl_const_unary_func func,
                                              void* user_data);
DTL_API dtl_status dtl_for_each_array(dtl_array_t arr, dtl_unary_func func,
                                       void* user_data);
DTL_API dtl_status dtl_for_each_array_const(dtl_array_t arr, dtl_const_unary_func func,
                                             void* user_data);
DTL_API dtl_status dtl_transform_vector(dtl_vector_t src, dtl_vector_t dst,
                                         dtl_transform_func func, void* user_data);
DTL_API dtl_status dtl_transform_array(dtl_array_t src, dtl_array_t dst,
                                        dtl_transform_func func, void* user_data);
DTL_API dtl_status dtl_copy_vector(dtl_vector_t src, dtl_vector_t dst);
DTL_API dtl_status dtl_copy_array(dtl_array_t src, dtl_array_t dst);
DTL_API dtl_status dtl_fill_vector(dtl_vector_t vec, const void* value);
DTL_API dtl_status dtl_fill_array(dtl_array_t arr, const void* value);
DTL_API dtl_index_t dtl_find_vector(dtl_vector_t vec, const void* value);
DTL_API dtl_index_t dtl_find_if_vector(dtl_vector_t vec, dtl_predicate pred,
                                        void* user_data);
DTL_API dtl_index_t dtl_find_array(dtl_array_t arr, const void* value);
DTL_API dtl_index_t dtl_find_if_array(dtl_array_t arr, dtl_predicate pred,
                                       void* user_data);
DTL_API dtl_size_t dtl_count_vector(dtl_vector_t vec, const void* value);
DTL_API dtl_size_t dtl_count_if_vector(dtl_vector_t vec, dtl_predicate pred,
                                        void* user_data);
DTL_API dtl_size_t dtl_count_array(dtl_array_t arr, const void* value);
DTL_API dtl_size_t dtl_count_if_array(dtl_array_t arr, dtl_predicate pred,
                                       void* user_data);
DTL_API dtl_status dtl_reduce_local_vector(dtl_vector_t vec, dtl_reduce_op op,
                                            void* result);
DTL_API dtl_status dtl_reduce_local_vector_func(dtl_vector_t vec, dtl_binary_func func,
                                                 const void* identity, void* result,
                                                 void* user_data);
DTL_API dtl_status dtl_reduce_local_array(dtl_array_t arr, dtl_reduce_op op,
                                           void* result);
DTL_API dtl_status dtl_reduce_local_array_func(dtl_array_t arr, dtl_binary_func func,
                                                const void* identity, void* result,
                                                void* user_data);
DTL_API dtl_status dtl_sort_vector(dtl_vector_t vec);
DTL_API dtl_status dtl_sort_vector_descending(dtl_vector_t vec);
DTL_API dtl_status dtl_sort_vector_func(dtl_vector_t vec, dtl_comparator cmp,
                                         void* user_data);
DTL_API dtl_status dtl_sort_array(dtl_array_t arr);
DTL_API dtl_status dtl_sort_array_descending(dtl_array_t arr);
DTL_API dtl_status dtl_sort_array_func(dtl_array_t arr, dtl_comparator cmp,
                                        void* user_data);
DTL_API dtl_status dtl_minmax_vector(dtl_vector_t vec, void* min_val, void* max_val);
DTL_API dtl_status dtl_minmax_array(dtl_array_t arr, void* min_val, void* max_val);
DTL_API int dtl_all_of_vector(dtl_vector_t vec, dtl_predicate pred, void* user_data);
DTL_API int dtl_any_of_vector(dtl_vector_t vec, dtl_predicate pred, void* user_data);
DTL_API int dtl_none_of_vector(dtl_vector_t vec, dtl_predicate pred, void* user_data);
DTL_API int dtl_all_of_array(dtl_array_t arr, dtl_predicate pred, void* user_data);
DTL_API int dtl_any_of_array(dtl_array_t arr, dtl_predicate pred, void* user_data);
DTL_API int dtl_none_of_array(dtl_array_t arr, dtl_predicate pred, void* user_data);
DTL_API dtl_index_t dtl_min_element_vector(dtl_vector_t vec);
DTL_API dtl_index_t dtl_max_element_vector(dtl_vector_t vec);
DTL_API dtl_index_t dtl_min_element_array(dtl_array_t arr);
DTL_API dtl_index_t dtl_max_element_array(dtl_array_t arr);
DTL_API dtl_status dtl_inclusive_scan_vector(dtl_vector_t vec, dtl_reduce_op op);
DTL_API dtl_status dtl_exclusive_scan_vector(dtl_vector_t vec, dtl_reduce_op op);
DTL_API dtl_status dtl_inclusive_scan_array(dtl_array_t arr, dtl_reduce_op op);
DTL_API dtl_status dtl_exclusive_scan_array(dtl_array_t arr, dtl_reduce_op op);
DTL_API dtl_status dtl_async_for_each_vector(dtl_vector_t vec,
                                              dtl_unary_func func,
                                              void* user_data,
                                              dtl_request_t* req);
DTL_API dtl_status dtl_async_transform_vector(dtl_vector_t src,
                                               dtl_vector_t dst,
                                               dtl_transform_func func,
                                               void* user_data,
                                               dtl_request_t* req);
DTL_API dtl_status dtl_async_reduce_vector(dtl_vector_t vec,
                                            dtl_reduce_op op,
                                            void* result,
                                            dtl_request_t* req);
DTL_API dtl_status dtl_async_sort_vector(dtl_vector_t vec,
                                          dtl_request_t* req);
DTL_API dtl_status dtl_async_for_each_array(dtl_array_t arr,
                                             dtl_unary_func func,
                                             void* user_data,
                                             dtl_request_t* req);
DTL_API dtl_status dtl_async_reduce_array(dtl_array_t arr,
                                           dtl_reduce_op op,
                                           void* result,
                                           dtl_request_t* req);